Fixed Text Wrapping on Homepage (#197)
Fixed Text Wrapping on Homepage

--- a/themes/cloudposse/src/scss/base/typography.scss
+++ b/themes/cloudposse/src/scss/base/typography.scss
@@ -4,6 +4,7 @@ html {
 body,
 html {
   font-family: $font_0, $font_1, sans-serif;
+  line-height: 1.4;
 }
 
 strong {
